Feat: 투자 컨트랙트 메소드